# upy

./: .flake8  .gitignore  Makefile  main.py  pyproject.toml
tests/conditions/: test_condition.py  test_condition_logical.py  test_group.py
tests/delete/: test_delete_base.py
tests/fields/: test_field_build.py  test_field_compare_equal.py  test_field_compare_gt_ge.py  test_field_compare_like.py  test_field_compare_lt_le.py  test_field_compare_not_equal.py
tests/table/: test_table_build.py
tests/update/: test_update_base.py
upy/: __init__.py  builder.py  config.py  exceptions.py  utils.py
upy/conditions/: __init__.py  condition.py  utils.py
upy/core/: __init__.py  abstract_builder.py  table_model.py
upy/expressions/: __init__.py  expression.py
upy/fields/: __init__.py  field.py
upy/table/: __init__.py  table.py  table_meta.py
