[project]
name = "upy"

[tool.poetry]
name = "upy"
version = "0.0.1"
description = "An async Python ORM with pydantic data validation."
authors = ["Dmitriy Vitvitskiy <autistintrovert@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = ""
documentation = ""
packages = [
    { include = "upy" }
]
keywords = []

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.3.0"
six = "^1.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
mypy = "^1.5.1"
flake8 = "^6.1.0"
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pylint]
max-line-length = 120
disable = [
    "fixme"
]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
